# graph_blas_triag_search

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: ci.yml
lagraph_bench/: lagraph_bench.c
src/: algorithms.py  convert.py  loader.py  main.py  plot.py  py-bench-burkhard.csv  py-bench-sandia.csv  test-res-lagr-burkhard.csv  test-res-lagr-sandia.csv
tests/: test_algorithms.py
